# LoopLM

./: .gitignore  README.md  example.py  pyproject.toml  qwen3_looplm_train.py  qwen3_looplm_training.py
loop_lm/: __init__.py  config.py  injection.py  model.py
