[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "loop-lm"
version = "0.1.0"
description = "LoopLM — Qwen3-based Recurrent-Depth Transformer with variable inference-time loop depth"
license = "MIT"
authors = []
readme = "README.md"
keywords = [
    "looped transformer",
    "recurrent depth transformer",
    "qwen3",
    "inference time scaling",
    "deep thinking",
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
torch = ">=2.1.0"
transformers = ">=4.51.0"   # Qwen3 support requires 4.51+

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0"
black = ">=23.0"
ruff = ">=0.5.0"

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100
target-version = ["py310"]
